# QR_code_generator

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  image_provider.rs  lib.rs  main.rs  qr_embedder.rs  qr_validator.rs
