[package]
name = "qr_code_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Image processing
image = "0.25.1"
imageproc = "0.25.0"

# QR code generation and decoding
qrcode = "0.14.0"
rqrr = "0.7.1"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "blocking"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Image format support
png = "0.17"
